<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="6" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miejsca_zwiedzanie"
        android:layout_gravity="center"
        android:textStyle="italic"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

     <EditText
        android:id="@+id/edplaceid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:hint="@string/wpisz_id" />
     
    <EditText
        android:id="@+id/edplace"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:hint="@string/wpisz_miejsce" />

    
    <EditText 
        android:id="@+id/edcountry"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:hint="@string/wpisz_kraj"/>
 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="#FE2E64">       
        
     	<Button
            android:id="@+id/btnadd"
            android:layout_width="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffff2f5d"
            android:textColor="#fff"
            android:textSize="20sp"
            android:text="@string/dodaj" />
     		
     		<Button
     		    android:id="@+id/btnupdate"
     			android:layout_width="0dp"
     			android:layout_marginLeft="5dp"
     			android:layout_marginRight="5dp"
     			android:layout_height="wrap_content"
     			android:layout_weight="1"
     			android:background="#ffff2f5d"
                android:textColor="#fff"
                android:textSize="20sp"
                android:text="@string/odswiez"/>
     		<Button
     		    android:id="@+id/btndelete"
     			android:layout_width="0dp"
     			android:layout_marginLeft="5dp"
     			android:layout_marginRight="5dp"
     			android:layout_height="wrap_content"
     			android:layout_weight="1"
     			android:background="#ffff2f5d"
                android:textColor="#fff"
                android:textSize="20sp"
                android:onClick="wybor"
                android:text="@string/usun"/>
     		     		
</LinearLayout>

        
 <ImageView
     android:id="@+id/imageView1"
     android:layout_width="200sp"
     android:layout_height="150dp"
     android:layout_gravity="center"
     android:src="@drawable/miasto" />
 <Button
        android:id="@+id/btnview"
        android:layout_width="match_parent"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="5dp"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="#ff2b84ff"
        android:textColor="#fff"
        android:textSize="20sp"
        android:text="@string/pokaz_miejsca" />
 
  <TextView
        android:id="@+id/txtresulttext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:gravity="left"
        android:text=""
        android:layout_weight="1"
        android:textStyle="italic|bold"
        android:textSize="20sp" />
  
</LinearLayout>